# No-Reload-Mod-Manager

./: .gitignore  README.md  appcast.xml  distribute_options.yaml  dsa_pub.pem  flutter_launcher_icons.yaml  pubspec.yaml
.github/workflows/: flutter_build_windows.yml  flutter_build_windows_local.yml  write_appcast.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/fluttertestui/: MainActivity.kt
assets/changed_from_carouselslider/: carousel_controller
assets/cloud_data/: link_contact.txt  link_support.txt  link_tutorial.txt  message_endfield.txt  message_genshin.txt  message_hsr.txt  message_wuwa.txt  message_zzz.txt
assets/cloud_data/auto_icon/: README.md  auto_icon.json
assets/cloud_data/auto_icon/endfield/: _icon.json
assets/cloud_data/auto_icon/genshin/: _icon.json
assets/cloud_data/auto_icon/hsr/: _icon.json
assets/cloud_data/auto_icon/wuwa/: _icon.json
assets/cloud_data/auto_icon/zzz/: _icon.json
assets/cloud_data/common_modding_lib/: common_modding_lib.json
assets/template_txt/: listen_keypress_additional_window.txt  listen_keypress_manager.txt  template_group.txt  template_manager_group.txt
assets/translations/: en.json  id.json  ru.json  zh-CN.json  zh-TW.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: custom_icons.dart  ini_handler_bridge.dart  main.dart
lib/XXMILib-Ini-Handler/: Globals.h  IniHandler.cpp  README.md  XXMILib-Ini-Handler.h  XXMILib-Ini-Handler.sln  XXMILib-Ini-Handler.vcxproj.filters  util.h
lib/bcdeclib/: .gitignore  CMakeLists.txt  bcdeclib.slnx  bcdeclib.vcxproj  bcdeclib.vcxproj.filters  dllmain.cpp
lib/casual_style/: dds_handler_bridge.dart  dds_image_widget.dart  mods_tab_casual.dart
lib/data/: mod_data.dart
lib/tabs/: keybinds_tab.dart  mods_presets_tab.dart  mods_tab.dart  mods_tab_carousel.dart  mods_tab_grid.dart  mods_troubleshoot_tab.dart  settings_tab.dart
lib/utils/: archive_manager.dart  auto_group_icon.dart  check_admin_privillege.dart  constant_var.dart  custom_group_folder_icon.dart  custom_menu_item.dart  force_read_as_utf8.dart  gamepad_poller.dart  get_cloud_data.dart  get_process_name.dart  hotkey_handler.dart  ini_handler_bridge.dart  keypress_simulate.dart  keypress_simulator_manager.dart  languages_name.dart  managedfolder_watcher.dart  mod_manager.dart  mod_manager.dart_backup  mod_navigator.dart  mod_searcher.dart  mod_troubleshoot.dart  mods_dropzone.dart  mods_path_validator.dart  refreshable_image.dart  rightclick_menu.dart  shared_pref.dart  stack_collection.dart  state_providers.dart  ui_dialogues.dart  xinput_poller.dart
lib/xxmi_lib_ini_handler/: .gitignore  CMakeLists.txt  CommandList.cpp  CommandList.h  Globals.h  IniHandler.cpp  IniHandler.h  README.md  ResourceHash.cpp  ResourceHash.h  XXMILib-Ini-Handler.cpp  XXMILib-Ini-Handler.h  XXMILib-Ini-Handler.vcxproj  XXMILib-Ini-Handler.vcxproj.filters  util_min.h
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/packaging/exe/: inno_setup.iss  make_config.yaml
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
